--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
 <svg width="300" height="150"></svg>
 <!-- NEW: Container for T04-3 chart -->
 <div class="responsive-svg-container"></div>
-<!-- D3 library -->
-<script src="https://d3js.org/d3.v7.min.js"></script>
 <!-- NEW: T04-4 loader -->
-<script src="t04-4-load.js"></script>
-<!-- Old js files (disable while doing T04-4) -->
-<!-- <script src="energy-d3.js"></script> -->
-<!-- <script src="t04-3-bars.js"></script> -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="t04-4-load.js"></script>  // loads CSV then calls createBarChart
+<script src="t04-5-bars.js"></script>  // defines createBarChart
 
   
 
